--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.1.3",
-    "@expo/webpack-config": "~19.0.1",
+    "@expo/metro-runtime": "~3.2.1",
+    "@expo/webpack-config": "~17.0.1",
     "@lottiefiles/react-lottie-player": "^3.5.3",
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
@@ -18,28 +18,29 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "axios": "^1.6.8",
-    "expo": "^51.0.11",
-    "expo-linear-gradient": "^12.7.2",
-    "expo-location": "^16.5.5",
-    "expo-splash-screen": "^0.26.5",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^51.0.13",
+    "expo-linear-gradient": "^13.0.2",
+    "expo-location": "^17.0.1",
+    "expo-splash-screen": "^0.27.5",
+    "expo-status-bar": "~1.12.1",
     "firebase": "^10.11.0",
     "formik": "^2.4.5",
-    "lottie-react-native": "^6.5.1",
+    "lottie-react-native": "^6.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "0.74.2",
     "react-native-bouncy-checkbox": "^4.0.0",
-    "react-native-maps": "^1.10.0",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-maps": "^1.14.0",
     "react-native-mmkv": "^2.12.2",
-    "react-native-pager-view": "6.2.3",
-    "react-native-safe-area-context": "^4.8.2",
+    "react-native-pager-view": "6.3.0",
+    "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.29.0",
     "react-native-shimmer-placeholder": "^2.0.9",
     "react-native-stock-star-rating": "^1.0.6",
     "react-native-tab-view": "^3.5.2",
     "react-native-web": "~0.19.6",
-    "react-native-webview": "^13.6.4",
+    "react-native-webview": "^13.8.6",
     "yup": "^1.4.0"
   },
   "devDependencies": {
